<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rosgraph</name>
  <version>0.1.0</version>
  <description>A tool for displaying the current ROS graph on the command line.</description>
  <maintainer email="gbiggs@killbots.net">Geoffrey Biggs</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>librosgraph</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_pep8</test_depend>
  <test_depend>ament_pyflakes</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

